<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.ge.predix.solsvc</groupId>
	<artifactId>datasource-service</artifactId>
	<name>datasource-service</name>
	<version>1.1.2-SNAPSHOT</version>
	<packaging>jar</packaging>
	<description>datasource-service</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>1.2.3.RELEASE</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<asset-bootstrap-client.version>1.1.3-SNAPSHOT</asset-bootstrap-client.version>
		<predix-timeseries-client.version>1.1.5-SNAPSHOT</predix-timeseries-client.version>
		<predix-rest-client.version>1.1.4-SNAPSHOT</predix-rest-client.version>

		<cxf.version>2.7.3</cxf.version>
		<org.codehaus.jackson.version>1.9.13</org.codehaus.jackson.version>
		<commons.lang.version>2.6</commons.lang.version>
		<commons.math.version>2.0</commons.math.version>
		<spring-security-oauth2.version>2.0.3.RELEASE</spring-security-oauth2.version>
		<spring-security-jwt.version>1.0.2.RELEASE</spring-security-jwt.version>
		<cloudfoundry.version>2.3.2-GE</cloudfoundry.version>
		<logback.version>1.1.3</logback.version>
		<groovy.version>2.3.5</groovy.version>
		<uaa-token-lib.version>2.0.0</uaa-token-lib.version>

		<java.version>1.8</java.version>
		<maven-compiler-plugin.version>2.5.1</maven-compiler-plugin.version>
		<maven-surefire-plugin.version>2.16</maven-surefire-plugin.version>
		<maven-failsafe-plugin.version>2.17</maven-failsafe-plugin.version>
	</properties>


	<dependencies>
		<dependency>
			<groupId>com.ge.predix.solsvc</groupId>
			<artifactId>datasource-service-interface</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cloud-connectors</artifactId>
			<exclusions>
				<exclusion>
					<artifactId>log4j-over-slf4j</artifactId>
					<groupId>org.slf4j</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-rt-frontend-jaxrs</artifactId>
			<version>${cxf.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-rt-rs-extension-providers</artifactId>
			<version>${cxf.version}</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-jaxrs</artifactId>
			<version>${org.codehaus.jackson.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>${commons.lang.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math</artifactId>
			<version>${commons.math.version}</version>
		</dependency>

		<dependency>
			<groupId>com.ge.predix.solsvc</groupId>
			<artifactId>predix-rest-client</artifactId>
			<version>${predix-rest-client.version}</version>
		</dependency>

		<!-- Asset Bootstrap client -->
		<dependency>
			<groupId>com.ge.predix.solsvc</groupId>
			<artifactId>asset-bootstrap-client</artifactId>
			<version>${asset-bootstrap-client.version}</version>
		</dependency>

		<!-- Timeseries Bootstrap client -->
		<dependency>
			<groupId>com.ge.predix.solsvc</groupId>
			<artifactId>timeseries-bootstrap</artifactId>
			<version>${predix-timeseries-client.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.apache.geronimo.specs</groupId>
					<artifactId>geronimo-servlet_3.0_spec</artifactId>
				</exclusion>
				<exclusion>
					<groupId>javax.servlet</groupId>
					<artifactId>javax.servlet-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- Spring Security -->
		<dependency>
			<groupId>org.springframework.security.oauth</groupId>
			<artifactId>spring-security-oauth2</artifactId>
			<version>${spring-security-oauth2.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-jwt</artifactId>
			<version>${spring-security-jwt.version}</version>
		</dependency>
		<dependency>
            <groupId>com.ge.predix</groupId>
            <artifactId>uaa-token-lib</artifactId>
            <version>${uaa-token-lib.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

		<!-- Logging Artifacts -->
		<dependency>
			<artifactId>logback-classic</artifactId>
			<groupId>ch.qos.logback</groupId>
			<version>${logback.version}</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.groovy</groupId>
			<artifactId>groovy</artifactId>
			<version>${groovy.version}</version>
		</dependency>

		<!-- Test Artifacts -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<dependencyManagement>
		<dependencies>

		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<!-- <version>${maven-compiler-plugin.version}</version> -->
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
					<debug>true</debug>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<!-- <version>${maven-failsafe-plugin.version}</version> -->
				<executions>
					<execution>
						<id>run-tests</id>
						<phase>integration-test</phase>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-junit4</artifactId>
						<version>${maven-surefire-plugin.version}</version>
					</dependency>
				</dependencies>
				<configuration>
					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
				</configuration>
			</plugin>
			<!-- <plugin> <groupId>org.jsonschema2pojo</groupId> <artifactId>jsonschema2pojo-maven-plugin</artifactId> 
				<version>0.4.10</version> <configuration> <sourceType>json</sourceType> <sourceDirectory>${basedir}/src/main/resources/json</sourceDirectory> 
				<targetPackage>com.ge.predix.solsvc.experience.datasource.datagrid.dto</targetPackage> 
				</configuration> <executions> <execution> <goals> <goal>generate</goal> </goals> 
				</execution> </executions> </plugin> -->
		</plugins>
	</build>

</project>
